databricks-mcp-entra-cert-auth/00-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agw-databricks-entra
  namespace: agentgateway-system
spec:
  gatewayClassName: enterprise-agentgateway-oas
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 8080
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: <MCP_GATEWAY_HOSTNAME>
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: gateway-tls
      mode: Terminate
