databricks-mcp-entra-cert-auth/02-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: azure-databricks-openapi-mcp
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agw-databricks-entra
  rules:
  - backendRefs:
    - group: enterpriseagentgateway.solo.io
      kind: EnterpriseAgentgatewayBackend
      name: ent-azure-databricks-openapi-backend
    matches:
    - path:
        type: PathPrefix
        value: /databricks/azure/mcp
    - path:
        type: PathPrefix
        value: /.well-known/oauth-protected-resource/databricks/azure/mcp
    - path:
        type: PathPrefix
        value: /.well-known/oauth-authorization-server/databricks/azure/mcp
